<resources>
    <string name="app_name">Relax</string>
    <string name="time">Notifications</string>
    <string name="swipe_left_for_register">Swipe left to register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="tag">Feeling down? Dive in!</string>
    <string name="swipe_right_for_login">Swipe right to login</string>
    <string name="register">Register</string>
    <string name="your_name">Name</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_myJourney">My journey</string>
    <string name="share_note">Share note</string>
    <string name="delete_notes">Delete notes</string>
    <string name="no_notes">Nothing here!</string>
    <string name="Physical_Section">Physical signs: How often would you say </string>
    <string name="Sleep_Section">Sleep signs: How often would you say </string>
    <string name="BEHAVIORAL_Section">Behavioral signs: How often do you say </string>
    <string name="Emotional_Section">Emotional signs: How often would you say </string>
    <string name="back_home"> Home</string>
    <string name="back_chat"> Chat</string>
    <string name="Result_txt">Based on your answers, you need to focus on the following
        factors to lessen the stress caused by them:</string>
    <string name="Result_Replacement">Based on your answers, You are absolutely great and you
        don\'t have any reasons to be stressed over, however you are always welcome to chat with me
        whenever you feel like! </string>
    <string name="next">Next</string>
    <string name="rb1">1</string>
    <string name="rb2">2</string>
    <string name="rb3">3</string>
    <string name="rb4">4</string>
    <string name="rb5">5</string>
    <string name="SurveyMocker">Take a survey and build your stress control plan.</string>
    <string name="recommendations">Recommendations</string>
    <string name="title_activity_journaling">Journaling</string>
    <string name="JournalIntro">Journaling is to write in detail about feelings and thoughts related to stressful events. It works best when done consistently, but even occasional journaling is a powerful relieving stress tool.</string>
    <string name="JournalHealthItem1">Journaling decreases the symptoms of asthma, arthritis, and other health conditions.\n</string>
    <string name="JournalHealthItem2">It improves cognitive functioning.\n</string>
    <string name="JournalHealthItem3">It can strengthen immune system response.\n</string>
    <string name="JournalHealthItem4">It can counteract many of the negative effects of stress.\n</string>
    <string name="JournalDrawBackTitle">Drawbacks</string>
    <string name="JournalDrawBack1">Those with learning disabilities may find it difficult to deal with the act of writing itself.\n</string>
    <string name="JournalDrawBack2">Perfectionists may be so concerned with the readability of their work, their handwriting that they can’t focus on the thoughts and emotions they’re trying to access.
Others may be reluctant to relive negative experiences.\n</string>
    <string name="JournalDrawBack3">Journaling only about your negative feelings without incorporating thoughts or plans may actually cause more stress.\n
        A simple way to prevent this is to be sure you end your journaling sessions with a few words about potential solutions to your problems, things you appreciate in your life, or things that give you hope in life.
    </string>
    <string name="JournalBenefitTitle">Benefits</string>
    <string name="JournalTitle">What is journaling?</string>
    <string name="btnBackHome">Go back</string>
    <string name="SleepTitle">Sleep like a baby!</string>
    <string name="SleepIntro">It may seem to you like a dreamy tale to sleep like a baby, but if
        you try the following suggestions, it actually can help you tremendously to make the dream come true!</string>
    <string name="SleepSuggest1">only sleep at night when you’re tired.\n</string>
    <string name="SleepSuggest2">do not read or watch TV in bed.\n</string>
    <string name="SleepSuggest3">do not use your phone, tablet, or computer in bed.\n</string>
    <string name="SleepSuggest4">do not toss and turn in your bed if you can’t sleep; get up and go to another room
        until you feel sleepy.\n</string>
    <string name="SleepSuggest5">avoid caffeine, large meals, and nicotine before bedtime.\n</string>
    <string name="SleepSuggest6">keep your room dark and cool.\n</string>
    <string name="SleepSuggest7">write down your worries before going to bed.\n</string>
    <string name="SleepSuggest8">go to sleep at the same time each night.\n</string>
    <string name="SleepSuggest9">listen to Quran in a low volume with your favorite recitation.\n</string>
    <string name="ChangeTitle">Changes…Are they good or bad for us?</string>
    <string name="ChangeIntro">Change can be good or bad. It depends on the person and the situation.
        For example,  A promotion is good, right? But if you’re unsure of your skills, you may
        view it as negative.\nGood or bad, change requires an adjustment of some kind. This takes
        energy. And if the demands are too great, it can drain you and create stress.\nUnmanaged stress can cause physical and emotional problems.\nYou may not be able to
        control the change itself.\nSo, the key to coping with change is to get control of your response to it as much as possible.</string>
    <string name="ChangeStressTitle">Change-related stress symptoms:</string>
    <string name="ChangeStressItems">
        <li>Headaches</li>\n
        <li>Insomnia</li>\n
        <li>Digestive problems</li>\n
        <li>Muscle tension and backaches</li>\n
        <li>High blood pressure/heart problems</li>\n
        <li>Depression or anxiety</li>\n
        <li>Irritability</li>\n
        <li>Eating too much or too little</li>\n
         <li>Alcohol or drug abuse</li>
    </string>
    <string name="ChangeTipsTitle">Tips to deal with change:</string>
    <string name="ChangeTips1">
        <b>Change is stressful, even when it’s positive.</b> But no change at all can be boring.
            Strive for balance.
            Too much stress all at once can be unhealthy. Same, too, if it goes on over a long period of time.
            People who experience a lot of changes in a brief time period are more likely to have
            an accident or illness.\n</string>
    <string name="ChangeTips2"><b>Try to think of change as a mixture of uncertainty and
        opportunity.</b> Ask yourself what lesson you might learn. What skills you might develop?
        How
        might you become stronger as a result of this change?\n</string>
    <string name="ChangeTips3"><b>During times of change, you need to take care of yourself.</b> Get
        regular exercise. Eat a balanced diet. Get enough sleep.\n</string>
    <string name="ChangeTips4"><b>Schedule planned changes so they don’t happen at once:</b> Are you
        getting married, buying a new house? You may want to hold off on job hunting until you’ve
        had time to deal with these other changes.\n</string>
    <string name="ChangeTips5"><b>If faced with a sudden change, take time to think about your
        emotions.</b> Are you
             happy, sad, scared, angry, excited? After you know what you’re feeling, ask yourself
             these questions:\n
        <b>-</b> Is my reaction justified?\n
           <b>-</b> Is the level of my reaction justified by the facts?\n
           <b>-</b> Am I overreacting?\n
           <b>-</b> Am I misinterpreting?\n
           <b>-</b> Is there another way to look at this? Is there an opportunity here?\n
           <b>-</b> Are there parts of this change that I can control?\n</string>
    <string name="ChangeTips6"><b>Evaluate your life every few months or so.</b> How many changes you
        are going through? Being aware will make it easier for you to understand and deal with
        the stress that may come with change.\n</string>
    <string name="ChangeTips7"><b>Learn to enjoy change.</b> When you have a positive outlook about
    change,
    it makes it easier to handle when it occurs. Don’t think about change in a negative way and
    add stress. Look at change as a way of keeping your life fresh and exciting.\n</string>
    <string name="ChangeTips8"><b>Talk about it.</b> Don’t keep feelings of sadness and stress
        bottled-up inside. Talk to someone you trust and feel comfortable with. Talking about
        what you’re going through can help.\n</string>
    <string name="NutritionTitle">Let your food be your medicine!</string>
    <string name="NutritionIntro">There are many strategies we use to handle the stress, and one of
        them includes what you eat.</string>
    <string name="OtamelTitle">Comfort foods</string>
    <string name="OtamelString">A bowl
        of warm oatmeal, boost levels of serotonin, a calming brain chemical.\nOther foods can
        cut levels of cortisol and adrenaline, stress hormones that take a toll on the body over time. A healthy diet can help counter the impact of stress by shoring up the immune system and lowering blood pressure.</string>
    <string name="ComplexCarbsTitle">Complex carbs</string>
    <string name="ComplexCarbsString">All carbs prompt the brain to make more serotonin. For a steady supply
        of this feel-good chemical, it\'s best to eat complex carbs, which take longer to
        digest.\nGood choices include whole-grain breads, pastas, and breakfast cereals,
        including old-fashioned oatmeal. Complex carbs can also help you feel balanced by stabilizing blood sugar levels.</string>
    <string name="SimpleCarbsTitle">Simple carbs</string>
    <string name="SimpleCarbsString">Nutrition professionals usually recommend steering clear of simple carbs,
        which include sweets and soda. But in a pinch, these foods can hit the spot.\nThey\'re
        digested quickly, leading to a spike in serotonin. Still, it does not last long, and
        simple carbs can also spike blood sugar, There are better options.
        So don\'t make these a stress-relieving habit; you should limit them.</string>
    <string name="OrangesTitle">Oranges</string>
    <string name="logo">logo</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_description">Describe your experience (optional)</string>
    <string name="send_feedback">Send my feedback</string>
    <string name="rate"><![CDATA[Rate & review]]></string>
    <string name="scale">scale point</string>
    <string name="logout">Logout</string>
    <string name="thoughts">My thoughts</string>
    <string name="my_weaknesses">My weaknesses</string>
    <string name="my_strength">My strengths</string>
    <string name="myLogins">My sessions over the year</string>
    <string name="statistic">Statistics</string>
    <string name="session_nm">Number of sessions</string>
    <string name="spent_times">Total spent time</string>
    <string name="last_session">Last session</string>
    <string name="last_session_date">Date</string>
    <string name="last_session_duration">Duration</string>
    <string name="journaling_nm">Total journaling sessions</string>
    <string name="resentment_list">My resentment list</string>
    <string name="gratitude_list">My gratitude list</string>
    <string name="notificationTimes">Selected Notification Time</string>
    <string name="userRate">My Rate for the app</string>
    <string name="userFeedback">My feedback to the app\'s author</string>
</resources>