<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.surveyPhysical"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:contentDescription="@string/scale"
            android:src="@drawable/scale"
            tools:ignore="ImageContrastCheck" />
    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:paddingHorizontal="8dp"
        android:layout_gravity="end"
        android:layout_marginStart="215dp"
        android:orientation="horizontal"
        android:weightSum="5">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/rb1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/rb2" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/rb3" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/rb4" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/rb5" />


    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:paddingHorizontal="8dp"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/simpleListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/NextBtn"
            android:layout_marginBottom="10dp"
            android:divider="@android:color/holo_blue_light"
            android:dividerHeight="1dp"
            android:footerDividersEnabled="true" />

        <Button
            android:id="@+id/NextBtn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="8dp"
            android:background="@color/light_turquoise"
            android:enabled="true"
            android:text="@string/next"
            android:textColor="#ffffff"
            android:textSize="16sp"
            tools:ignore="TextContrastCheck" />
    </RelativeLayout>

</LinearLayout>