<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="12dp"
    tools:context=".activities.Feedback">

    <TextView
        android:id="@+id/rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:text="@string/rate"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/dark_turquoise" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:layout_marginVertical="12dp"
        android:layout_below="@id/rate"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/user_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ratingBar"
        android:autofillHints="@string/feedback_description"
        android:hint="@string/feedback_description"
        android:layout_marginBottom="12dp"
        android:textSize="14sp" />

    <Button
        android:id="@+id/sendBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_feedback"
        android:layout_below="@id/user_feedback"
        style="@style/CustomBtn"

        android:padding="12dp"
        android:layout_centerHorizontal="true" />


</RelativeLayout>